--- a/style/about.css
+++ b/style/about.css
@@ -1,342 +1,267 @@
-@import url(./reset.css);
-
-/*   padding: 10px;
-  font-size: 15pt;
-  font-style: italic;
-  font-weight:700;
-  text-align: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-
-body{
-  background: #c9cacf;
+@import url('./reset.css') ;
+body {
+background : #c9cacf;
 }
-
-/* Header */
-#h1Container{
-  display: flex;
-  margin-top: 15pt;
-
-  justify-content: center;
-  align-items: center;
-
+#h1Container {
+display : flex;
+margin-top : 15pt;
+justify-content : center;
+align-items : center;
 }
 .header {
-	display: flex;
-	justify-content: space-between;
-    align-items: center;
-	height: 18%;
-  background: #ffffff;
-  background: -webkit-linear-gradient(90deg, #ffffff 0%, #000000 100%);
-  background: linear-gradient(90deg, #ffffff 0%, #000000 100%);
-  
+display : flex;
+justify-content : space-between;
+align-items : center;
+height : 18%;
+background : #ffffff;
+background : linear-gradient(90deg, #ffffff 0%, #000000 100%);
 }
-
 .logo img {
-  margin-left: 2.3em;
-  max-width: 100%;
-  height: auto !important;
+margin-left : 2.3em;
+max-width : 100%;
+height : auto !important ;
 }
-
 #nav-bar #link {
-	display: flex;
-    flex-flow: nowrap;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	transition: .5s;
-    list-style-type: none;
-    padding: 10px;
+display : flex;
+flex-flow : nowrap;
+flex-direction : row;
+justify-content : center;
+align-items : center;
+transition : 0.5s;
+list-style-type : none;
+padding : 10px;
 }
-
 #link li a {
-  padding: 10px 20px;
-	text-transform: uppercase;
-	text-decoration: none;
-	color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
-  transition: .25s;
+padding : 10px 20px;
+text-transform : uppercase;
+text-decoration : none;
+color : #fff;
+font-family : Arial, Helvetica, sans-serif;
+font-weight : bold;
+transition : 0.25s;
 }
-
 #link li a:hover {
-  padding: 10px 20px;
-	background: #8f8f8f;
-	color: #fff;
-  transition: .25s
+padding : 10px 20px;
+background : #8f8f8f;
+color : #fff;
+transition : 0.25s;
 }
-
-
-
-
-h1{
-  font-size: 40pt;
-  padding: 10px;
-  text-align: center;
-  margin-bottom: 1%;
-  text-transform: uppercase;
-  font-family: Impact, 'Arial Narrow Bold', sans-serif;
-  color: #26272b;
-  width: 30%;
-  background-color: aliceblue;
-  border:groove 10px #333;
+h1 {
+font-size : 40pt;
+padding : 10px;
+text-align : center;
+margin-bottom : 1%;
+text-transform : uppercase;
+font-family : Impact, 'Arial Narrow Bold', sans-serif;
+color : #26272b;
+width : 30%;
+background-color : aliceblue;
+border : #333 groove 10px;
 }
-
-@media screen and (max-width:900px) {
-
+@media screen and (max-width: 900px) {
 .header {
-display: flex;
-justify-content: center;
-align-items: center;
-background: #333;
+display : flex;
+justify-content : center;
+align-items : center;
+background : #333;
 }
 #link li a {
-	padding: 0px 10px;
-  }
-h1{
-  width: max-content;
-  padding: none;
-  font-size: 30pt;
+padding : 0 10px;
 }
- #nav-bar #link {
- display:flex;
- align-items: center;
-
-
+h1 {
+width : max-content;
+padding : 0;
+font-size : 30pt;
 }
-.logo{
-  display: none;
+#nav-bar #link {
+display : flex;
+align-items : center;
 }
-
+.logo {
+display : none;
+}
 #link li {
- width: max-content;
-
+width : max-content;
 }
-
- #link li a {
-     display: flex;
-     width: max-content;
-     justify-content: right;
-     color: azure;
+#link li a {
+display : flex;
+width : max-content;
+justify-content : right;
+color : azure;
 }
 #link li a:hover {
-	color: #333;
-	background: #fff;
+color : #333;
+background : #fff;
 }
-
-h1{
-  width: 60%;
-} 
+h1 {
+width : 60%;
 }
-
-
-section #h2container{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-  }
-section h2{
-	padding: 10px;
-	text-align: center;
-	font-size: 25pt;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	border-top:7px groove #26272b ;
-	border-bottom:7px groove #26272b ;
-	margin-top: 1%;
 }
-
-section p{
-	width: 85%;
-	padding: 10px;
-	font-size: 13pt;
-	font-style: italic;
-	font-weight:700;
-	/* text-align: center; */
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+section #h2container {
+display : flex;
+justify-content : center;
+align-items : center;
 }
-
-#pcontainer{
-	margin: 15px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+section h2 {
+padding : 10px;
+text-align : center;
+font-size : 25pt;
+font-family : 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+border-top : 7px groove #26272b;
+border-bottom : 7px groove #26272b;
+margin-top : 1%;
 }
-
-
-#licontainer li{
-	margin-bottom: 10px;
+section p {
+width : 85%;
+padding : 10px;
+font-size : 13pt;
+font-style : italic;
+font-weight : 700;
+font-family : 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-#licontainer{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	/* flex-wrap: wrap; */
-	padding: 10pt;
+.pcontainer {
+margin : 15px;
+display : flex;
+justify-content : center;
+align-items : center;
 }
-#allist{
-	width: 70%;
-	line-height: 25px;
-	list-style: disc;;
-	/* font-weight: 700; */
-	/* width: 90%; */
-	font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-	/* margin-top: 1px; */
-	/* word-spacing: 15px; */
+.licontainer li {
+margin-bottom : 10px;
 }
-
-#bold{
-	font-style: italic;
-	font-weight: 600;
-  }
-h3{
-	margin-left: 8.5%;
-	
-	padding: 10px;
-	font-size: 20px;
-	font-weight: 800;	
-	font-style: italic;
+.licontainer {
+display : flex;
+justify-content : center;
+align-items : center;
+padding : 10pt;
 }
-
-
-
-
-
-.site-footer
-{
-  background-color:#26272b;
-  padding:5px 20px;
-  font-size:15px;
-  line-height:3.1em;
-  color:#737373;
+.allist {
+width : 70%;
+line-height : 25px;
+list-style : disc;
+font-family : 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
-.site-footer a
-{
-  color:#737373;
+.bold {
+font-style : italic;
+font-weight : 600;
 }
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+h3 {
+margin-left : 8.5%;
+padding : 10px;
+font-size : 20px;
+font-weight : 800;
+font-style : italic;
 }
-.footer-links
-{
-  padding-left:0;
-  list-style:none
+.site-footer {
+background-color : #26272b;
+padding : 5px 20px;
+font-size : 15px;
+line-height : 3.1em;
+color : #737373;
 }
-.footer-links li
-{
-  display:block
+.site-footer a {
+color : #737373;
 }
-.footer-links a
-{
-  color:#737373
+.site-footer a:hover {
+color : #3366cc;
+text-decoration : none;
 }
-.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.footer-links {
+padding-left : 0;
+list-style : none;
 }
-.footer-links.inline li
-{
-  display:inline-block
+.footer-links li {
+display : block;
 }
-.site-footer .social-icons
-{
-  text-align:right
+.footer-links a {
+color : #737373;
 }
-.site-footer .social-icons a
-{
-  width:50px;
-  height:50px;
-  line-height:65px;
-  margin-left:9px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
+.footer-links a:hover {
+color : #3366cc;
+text-decoration : none;
 }
-.copyright-text
-{
-  margin:0
+.footer-links.inline li {
+display : inline-block;
 }
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30spx
-  }
+.site-footer .social-icons {
+text-align : right;
 }
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
-  }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
-  }
+.site-footer .social-icons a {
+width : 50px;
+height : 50px;
+line-height : 65px;
+margin-left : 9px;
+margin-right : 0;
+border-radius : 100%;
+background-color : #33353d;
 }
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
+.copyright-text {
+margin : 0;
 }
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
+@media (max-width: 991px) {
+.site-footer [class^="col-"] {
+margin-bottom : 30px;
 }
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  transition:all .2s linear;
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
+@media (max-width: 767px) {
+.site-footer {
+padding-bottom : 0;
 }
-
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
+.site-footer .copyright-text, .site-footer .social-icons {
+text-align : center;
 }
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
 }
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
+.social-icons {
+padding-left : 0;
+margin-bottom : 0;
+list-style : none;
 }
-.social-icons a.insta:hover
-{
-  background-color:#ea4c89
+.social-icons li {
+display : inline-block;
+margin-bottom : 4px;
 }
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
-  }
+.social-icons a {
+background-color : #eceeef;
+color : #818a91;
+font-size : 16px;
+display : inline-block;
+line-height : 44px;
+width : 44px;
+height : 44px;
+text-align : center;
+margin-right : 8px;
+border-radius : 100%;
+transition : all 0.2s linear;
 }
-.copyright-text{
-  color: aliceblue;
+.social-icons a:active, .social-icons a:focus, .social-icons a:hover {
+color : #fff;
+background-color : #29aafe;
+}
+.social-icons a.facebook:hover {
+background-color : #3b5998;
+}
+.social-icons a.twitter:hover {
+background-color : #00aced;
+}
+.social-icons a.linkedin:hover {
+background-color : #007bb6;
+}
+.social-icons a.insta:hover {
+background-color : #ea4c89;
+}
+@media (max-width: 767px) {
+.social-icons li.title {
+display : block;
+margin-right : 0;
+font-weight : 600;
+}
+}
+.copyright-text {
+color : aliceblue;
 }
 .copyright-text a {
-  color: aliceblue;
-  text-decoration: none;
+color : aliceblue;
+text-decoration : none;
 }
-.copyright-text a:hover{
-  color:#29aafe
+.copyright-text a:hover {
+color : #29aafe;
 }
