--- a/style/contact.css
+++ b/style/contact.css
@@ -1,329 +1,270 @@
-@import url(./reset.css);
-
-body{
-    background: #c9cacf;
-  }
-  
-  /* Header */
-  #h1Container{
-    display: flex;
-    margin-top: 15pt;
-  
-    justify-content: center;
-    align-items: center;
-  
-  }
-  .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      height: 18%;
-    background: #ffffff;
-    background: -webkit-linear-gradient(90deg, #ffffff 0%, #000000 100%);
-    background: linear-gradient(90deg, #ffffff 0%, #000000 100%);
-    
-  }
-  
-  .logo img {
-    margin-left: 2.3em;
-    max-width: 100%;
-    height: auto !important;
-  }
-  
-  #nav-bar #link {
-      display: flex;
-      flex-flow: nowrap;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      transition: .5s;
-      list-style-type: none;
-      padding: 10px;
-  }
-  
-  #link li a {
-    padding: 10px 20px;
-      text-transform: uppercase;
-      text-decoration: none;
-      color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
-      font-weight: bold;
-    transition: .25s;
-  }
-  
-  #link li a:hover {
-    padding: 10px 20px;
-      background: #8f8f8f;
-      color: #fff;
-    transition: .25s
-  }
-  
-  
-  
-  
-  
-  h1{
-    font-size: 40pt;
-    padding: 10px;
-    text-align: center;
-    margin-bottom: 1%;
-    text-transform: uppercase;
-    font-family: Impact, 'Arial Narrow Bold', sans-serif;
-    color: #26272b;
-    width: 30%;
-    background-color: aliceblue;
-    border:groove 10px #333;
-  }
-  
-  @media screen and (max-width:900px) {
-  
-    .header {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #333;
-      }
-      #link li a {
-        padding: 0px 10px;
-        }
-  h1{
-    width: max-content;
-    padding: none;
-    font-size: 30pt;
-  }
-   #nav-bar #link {
-   display:flex;
-   align-items: center;
-  
-  
-  }
-  .logo{
-    display: none;
-  }
-  
-  #link li {
-   width: max-content;
-  
-  }
-  
-   #link li a {
-       display: flex;
-       width: max-content;
-       justify-content: right;
-       color: azure;
-  }
-  #link li a:hover {
-      color: #333;
-      background: #fff;
-  }
-  
-  h1{
-    width: 60%;
-  }     
-  
-  }
-
-
-
-
-
-legend{
-    text-align: center;
-    background-color: #333;
-    color: azure;
-    padding: 4px;
-    font-size: 16px;
+@import url('./reset.css') ;
+body {
+background : #c9cacf;
 }
-fieldset{
-    padding: 10px;
-    margin-bottom: 1%;
-    border: black 3px solid;
-    background-color: azure;
-    border-radius: 2%;
+#h1Container {
+display : flex;
+margin-top : 15pt;
+justify-content : center;
+align-items : center;
 }
-form{
-    border: 3pt #333 solid;
-    padding: 8px;
-    line-height: 30px;
-    border-radius: 5%;
-    background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+.header {
+display : flex;
+justify-content : space-between;
+align-items : center;
+height : 18%;
+background : #ffffff;
+background : linear-gradient(90deg, #ffffff 0%, #000000 100%);
 }
-#request{
-    font-size: 17px;
-    font-weight: bold;
+.logo img {
+margin-left : 2.3em;
+max-width : 100%;
+height : auto !important ;
 }
-label{
-    font-weight: bolder;
-    font-family: 'Times New Roman', Times, serif;
+#nav-bar #link {
+display : flex;
+flex-flow : nowrap;
+flex-direction : row;
+justify-content : center;
+align-items : center;
+transition : 0.5s;
+list-style-type : none;
+padding : 10px;
 }
-input[type=text], input[type=password], input[type=email], input[type=number], textarea    {
-    border-style: inset;
-    border-width: 2px;
+#link li a {
+padding : 10px 20px;
+text-transform : uppercase;
+text-decoration : none;
+color : #fff;
+font-family : Arial, Helvetica, sans-serif;
+font-weight : bold;
+transition : 0.25s;
 }
-.formContainer{
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#link li a:hover {
+padding : 10px 20px;
+background : #8f8f8f;
+color : #fff;
+transition : 0.25s;
 }
-.button{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
+h1 {
+font-size : 40pt;
+padding : 10px;
+text-align : center;
+margin-bottom : 1%;
+text-transform : uppercase;
+font-family : Impact, 'Arial Narrow Bold', sans-serif;
+color : #26272b;
+width : 30%;
+background-color : aliceblue;
+border : #333 groove 10px;
 }
-#submit{
-    padding: 10px;
-    background-color: aliceblue;
-    color: #333;
-    font-size: 12pt;
-    transition: 0.25s;
+@media screen and (max-width: 900px) {
+.header {
+display : flex;
+justify-content : center;
+align-items : center;
+background : #333;
 }
-#submit:hover{
-    background-color: #333;
-    color: #ccc;
+#link li a {
+padding : 0 10px;
 }
-
-
-
-.site-footer
-{
-  background-color:#26272b;
-  padding:5px 20px;
-  font-size:15px;
-  line-height:3.1em;
-  color:#737373;
+h1 {
+width : max-content;
+padding : 0;
+font-size : 30pt;
 }
-.site-footer a
-{
-  color:#737373;
+#nav-bar #link {
+display : flex;
+align-items : center;
 }
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.logo {
+display : none;
 }
-.footer-links
-{
-  padding-left:0;
-  list-style:none
+#link li {
+width : max-content;
 }
-.footer-links li
-{
-  display:block
+#link li a {
+display : flex;
+width : max-content;
+justify-content : right;
+color : azure;
 }
-.footer-links a
-{
-  color:#737373
+#link li a:hover {
+color : #333;
+background : #fff;
 }
-.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+h1 {
+width : 60%;
 }
-.footer-links.inline li
-{
-  display:inline-block
 }
-.site-footer .social-icons
-{
-  text-align:right
+legend {
+text-align : center;
+background-color : #333;
+color : azure;
+padding : 4px;
+font-size : 16px;
 }
-.site-footer .social-icons a
-{
-  width:50px;
-  height:50px;
-  line-height:65px;
-  margin-left:9px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
+fieldset {
+padding : 10px;
+margin-bottom : 1%;
+border : black solid 3px;
+background-color : azure;
+border-radius : 2%;
 }
-.copyright-text
-{
-  margin:0
+form {
+border : #333 solid 3pt;
+padding : 8px;
+line-height : 30px;
+border-radius : 5%;
+background : linear-gradient(135deg, #ffffff 0%, #000000 100%);
 }
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30spx
-  }
+#request {
+font-size : 17px;
+font-weight : bold;
 }
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
-  }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
-  }
+label {
+font-weight : bolder;
+font-family : 'Times New Roman', Times, serif;
 }
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
+input[type="text"], input[type="password"], input[type="email"], input[type="number"], textarea {
+border-style : inset;
+border-width : 2px;
 }
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
+.formContainer {
+padding : 20px;
+display : flex;
+justify-content : center;
+align-items : center;
 }
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  transition:all .2s linear;
+.button {
+text-align : center;
+display : flex;
+justify-content : center;
+align-items : center;
+padding : 5px;
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
+#submit {
+padding : 10px;
+background-color : aliceblue;
+color : #333;
+font-size : 12pt;
+transition : 0.25s;
 }
-
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
+#submit:hover {
+background-color : #333;
+color : #ccc;
 }
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
+.site-footer {
+background-color : #26272b;
+padding : 5px 20px;
+font-size : 15px;
+line-height : 3.1em;
+color : #737373;
 }
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
+.site-footer a {
+color : #737373;
 }
-.social-icons a.insta:hover
-{
-  background-color:#ea4c89
+.site-footer a:hover {
+color : #3366cc;
+text-decoration : none;
 }
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
-  }
+.footer-links {
+padding-left : 0;
+list-style : none;
 }
-.copyright-text{
-  color: aliceblue;
+.footer-links li {
+display : block;
+}
+.footer-links a {
+color : #737373;
+}
+.footer-links a:hover {
+color : #3366cc;
+text-decoration : none;
+}
+.footer-links.inline li {
+display : inline-block;
+}
+.site-footer .social-icons {
+text-align : right;
+}
+.site-footer .social-icons a {
+width : 50px;
+height : 50px;
+line-height : 65px;
+margin-left : 9px;
+margin-right : 0;
+border-radius : 100%;
+background-color : #33353d;
+}
+.copyright-text {
+margin : 0;
+}
+@media (max-width: 991px) {
+.site-footer [class^="col-"] {
+margin-bottom : 30px;
+}
+}
+@media (max-width: 767px) {
+.site-footer {
+padding-bottom : 0;
+}
+.site-footer .copyright-text, .site-footer .social-icons {
+text-align : center;
+}
+}
+.social-icons {
+padding-left : 0;
+margin-bottom : 0;
+list-style : none;
+}
+.social-icons li {
+display : inline-block;
+margin-bottom : 4px;
+}
+.social-icons a {
+background-color : #eceeef;
+color : #818a91;
+font-size : 16px;
+display : inline-block;
+line-height : 44px;
+width : 44px;
+height : 44px;
+text-align : center;
+margin-right : 8px;
+border-radius : 100%;
+transition : all 0.2s linear;
+}
+.social-icons a:active, .social-icons a:focus, .social-icons a:hover {
+color : #fff;
+background-color : #29aafe;
+}
+.social-icons a.facebook:hover {
+background-color : #3b5998;
+}
+.social-icons a.twitter:hover {
+background-color : #00aced;
+}
+.social-icons a.linkedin:hover {
+background-color : #007bb6;
+}
+.social-icons a.insta:hover {
+background-color : #ea4c89;
+}
+@media (max-width: 767px) {
+.social-icons li.title {
+display : block;
+margin-right : 0;
+font-weight : 600;
+}
+}
+.copyright-text {
+color : aliceblue;
 }
 .copyright-text a {
-  color: aliceblue;
-  text-decoration: none;
+color : aliceblue;
+text-decoration : none;
 }
-.copyright-text a:hover{
-  color:#29aafe
+.copyright-text a:hover {
+color : #29aafe;
 }
