--- a/style/index.css
+++ b/style/index.css
@@ -1,478 +1,344 @@
-@import url(./reset.css);
-
-
-body{
-  background: #c9cacf;
+@import url('./reset.css') ;
+body {
+background : #c9cacf;
 }
-
-/* Header */
-#h1Container{
-  display: flex;
-  margin-top: 15pt;
-
-  justify-content: center;
-  align-items: center;
-
+#h1Container {
+display : flex;
+margin-top : 15pt;
+justify-content : center;
+align-items : center;
 }
 .header {
-	display: flex;
-	justify-content: space-between;
-    align-items: center;
-	height: 18%;
-  background: #ffffff;
-  background: -webkit-linear-gradient(90deg, #ffffff 0%, #000000 100%);
-  background: linear-gradient(90deg, #ffffff 0%, #000000 100%);
-  
+display : flex;
+justify-content : space-between;
+align-items : center;
+height : 18%;
+background : #ffffff;
+background : linear-gradient(90deg, #ffffff 0%, #000000 100%);
 }
-
 .logo img {
-  margin-left: 2.3em;
-  max-width: 100%;
-  height: auto !important;
+margin-left : 2.3em;
+max-width : 100%;
+height : auto !important ;
 }
-
 #nav-bar #link {
-	display: flex;
-    flex-flow: nowrap;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	transition: .5s;
-    list-style-type: none;
-    padding: 10px;
+display : flex;
+flex-flow : nowrap;
+flex-direction : row;
+justify-content : center;
+align-items : center;
+transition : 0.5s;
+list-style-type : none;
+padding : 10px;
 }
-
 #link li a {
-  padding: 10px 20px;
-	text-transform: uppercase;
-	text-decoration: none;
-	color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
-  transition: .25s;
+padding : 10px 20px;
+text-transform : uppercase;
+text-decoration : none;
+color : #fff;
+font-family : Arial, Helvetica, sans-serif;
+font-weight : bold;
+transition : 0.25s;
 }
-
 #link li a:hover {
-  padding: 10px 20px;
-	background: #8f8f8f;
-	color: #fff;
-  transition: .25s
+padding : 10px 20px;
+background : #8f8f8f;
+color : #fff;
+transition : 0.25s;
 }
-
-
-
-
-
-h1{
-  font-size: 40pt;
-  padding: 10px;
-  text-align: center;
-  margin-bottom: 1%;
-  text-transform: uppercase;
-  font-family: Impact, 'Arial Narrow Bold', sans-serif;
-  color: #26272b;
-  width: 30%;
-  background-color: aliceblue;
-  border:groove 10px #333;
+h1 {
+font-size : 40pt;
+padding : 10px;
+text-align : center;
+margin-bottom : 1%;
+text-transform : uppercase;
+font-family : Impact, 'Arial Narrow Bold', sans-serif;
+color : #26272b;
+width : 30%;
+background-color : aliceblue;
+border : #333 groove 10px;
 }
-
-@media screen and (max-width:900px) {
-
-  .header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #333;
-    }
-    #link li a {
-      padding: 0px 10px;
-      }
-h1{
-  width: max-content;
-  padding: none;
-  font-size: 30pt;
+@media screen and (max-width: 900px) {
+.header {
+display : flex;
+justify-content : center;
+align-items : center;
+background : #333;
 }
- #nav-bar #link {
- display:flex;
- align-items: center;
-
-
+#link li a {
+padding : 0 10px;
 }
-.logo{
-  display: none;
+h1 {
+width : max-content;
+font-size : 30pt;
 }
-
+#nav-bar #link {
+display : flex;
+align-items : center;
+}
+.logo {
+display : none;
+}
 #link li {
- width: max-content;
-
+width : max-content;
 }
-
- #link li a {
-     display: flex;
-     width: max-content;
-     justify-content: right;
-     color: azure;
+#link li a {
+display : flex;
+width : max-content;
+justify-content : right;
+color : azure;
 }
 #link li a:hover {
-	color: #333;
-	background: #fff;
+color : #333;
+background : #fff;
 }
-
-h1{
-  width: 60%;
-}     
-
+h1 {
+width : 60%;
 }
-
-#section1 #h2container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
-#section1 h2{
-  padding: 10px;
-  text-align: center;
-  font-size: 25pt;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  border-top:7px groove #26272b ;
-  border-bottom:7px groove #26272b ;
-  margin-top: 1%;
+#section1 .h2container {
+display : flex;
+justify-content : center;
+align-items : center;
 }
-
-#section1 #pcontainer{
-  font-size: 15pt;
-  padding: 10pt;
-  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-  word-spacing: 3px;
+#section1 h2 {
+padding : 10px;
+text-align : center;
+font-size : 25pt;
+font-family : 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+border-top : 7px groove #26272b;
+border-bottom : 7px groove #26272b;
+margin-top : 1%;
 }
-#pcontainer p{
-  width: 70%;
-  font-weight: 500;
+#section1 #pcontainer {
+font-size : 15pt;
+padding : 10pt;
+font-family : 'Segoe UI', Tahoma, Verdana, sans-serif;
+word-spacing : 3px;
 }
-#pcontainer{
-  display: flex;
-  align-items: center;
-  justify-content:center;
-  text-align: center;
+#pcontainer p {
+width : 70%;
+font-weight : 500;
 }
-article p{
-  padding: 10px;
-  font-size: 15pt;
-  font-style: italic;
-  font-weight:700;
-  text-align: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+#pcontainer {
+display : flex;
+align-items : center;
+justify-content : center;
+text-align : center;
 }
-article ul div{
-  padding: 30px;
-  text-align: center;
+.video-iframe {
+border : none;
 }
-article ul div li #licontainer{
-  width: 50%;
-  float: left;
-  order: 0;
-} 
-article ul li{
-  /* list-style-type: circle; */
-  font-size: 20px;
-  padding: 10pt;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+article p {
+padding : 10px;
+font-size : 15pt;
+font-style : italic;
+font-weight : 700;
+text-align : center;
+font-family : 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-article ul li:nth-child(1){
-  border-top: #fff 5px solid;
+article ul div {
+padding : 30px;
+text-align : center;
 }
-article ul li:nth-child(even){
-  border-bottom: #fff 5px solid;
+article ul div li .licontainer {
+width : 50%;
+float : left;
+order : 0;
 }
-article ul li:nth-child(odd){
-  border-bottom: #333 5px solid;
+article ul li {
+font-size : 20px;
+padding : 10pt;
+display : flex;
+justify-content : center;
+align-items : center;
 }
-
-article ul div li picture{
-  order: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+article ul li:nth-child(1) {
+border-top : 5px solid #fff;
 }
-article ul div li a{
-  color: #007bb6;
+article ul li:nth-child(even) {
+border-bottom : 5px solid #fff;
 }
-
-main{
-  padding: 10px;
+article ul li:nth-child(odd) {
+border-bottom : 5px solid #333;
 }
-
-#section2 #h2container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+article ul div li picture {
+order : 1;
+display : flex;
+justify-content : center;
+align-items : center;
 }
-#section2 h2{
-  padding: 10px;
-  text-align: center;
-  font-size: 25pt;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  border-top:7px groove #26272b ;
-  border-bottom:7px groove #26272b ;
-  margin-bottom: 1%;
+article ul div li a {
+color : #007bb6;
 }
-
-
-
-
-
-.slides {
-    padding: 0;
-    width: 609px;
-    height: 420px;
-    display: block;
-    margin: 0 auto;
-    position: relative;
+main {
+padding : 10px;
 }
-
-.slides * {
-    user-select: none;
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
+#section2 #h2container {
+display : flex;
+justify-content : center;
+align-items : center;
 }
-
-.slides input { display: none; }
-
-.slide-container { display: block; }
-
-.slide {
-    top: 0;
-    opacity: 0;
-    width: 609px;
-    height: 420px;
-    display: block;
-    position: absolute;
-
-    transform: scale(0);
-
-    transition: all .7s ease-in-out;
+#section2 h2 {
+padding : 10px;
+text-align : center;
+font-size : 25pt;
+font-family : 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+border-top : 7px groove #26272b;
+border-bottom : 7px groove #26272b;
+margin-bottom : 1%;
 }
-
-.slide img {
-    width: 100%;
-    height: 100%;
+#slider {
+overflow : hidden;
 }
-
-.nav label {
-    width: 200px;
-    height: 100%;
-    display: none;
-    position: absolute;
-
-	  opacity: 0;
-    z-index: 9;
-    cursor: pointer;
-
-    transition: opacity .2s;
-
-    color: #FFF;
-    font-size: 156pt;
-    text-align: center;
-    line-height: 380px;
-    font-family: "Varela Round", sans-serif;
-    background-color: rgba(255, 255, 255, .3);
-    text-shadow: 0px 0px 15px rgb(119, 119, 119);
+#slider figure {
+position : relative;
+width : 500%;
+margin : 0;
+left : 0;
+animation : slider 20s infinite;
 }
-
-.slide:hover + .nav label { opacity: 0.5; }
-
-.nav label:hover { opacity: 1; }
-
-.nav .next { right: 0; }
-
-input:checked + .slide-container  .slide {
-    opacity: 1;
-
-    transform: scale(1);
-
-    transition: opacity 1s ease-in-out;
+#slider figure img {
+float : left;
+width : 20%;
 }
-
-input:checked + .slide-container .nav label { display: block; }
-
-.nav-dots {
-	width: 100%;
-	bottom: 9px;
-	height: 11px;
-	display: block;
-	position: absolute;
-	text-align: center;
+@keyframes slider {
+0% {
+left : 0;
 }
-
-.nav-dots .nav-dot {
-	top: -5px;
-	width: 11px;
-	height: 11px;
-	margin: 0 4px;
-	position: relative;
-	border-radius: 100%;
-	display: inline-block;
-	background-color: rgba(0, 0, 0, 0.6);
+20% {
+left : 0;
 }
-
-.nav-dots .nav-dot:hover {
-	cursor: pointer;
-	background-color: rgba(0, 0, 0, 0.8);
+25% {
+left : -100%;
 }
-
-input#img-1:checked ~ .nav-dots label#img-dot-1,
-input#img-2:checked ~ .nav-dots label#img-dot-2,
-input#img-3:checked ~ .nav-dots label#img-dot-3,
-input#img-4:checked ~ .nav-dots label#img-dot-4,
-input#img-5:checked ~ .nav-dots label#img-dot-5,
-input#img-6:checked ~ .nav-dots label#img-dot-6 {
-	background: rgba(0, 0, 0, 0.8);
+45% {
+left : -100%;
 }
-
-
-
-.site-footer
-{
-  background-color:#26272b;
-  padding:5px 20px;
-  font-size:15px;
-  line-height:3.1em;
-  color:#737373;
+50% {
+left : -200%;
 }
-.site-footer a
-{
-  color:#737373;
+70% {
+left : -200%;
 }
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+75% {
+left : -300%;
 }
-.footer-links
-{
-  padding-left:0;
-  list-style:none
+95% {
+left : -300%;
 }
-.footer-links li
-{
-  display:block
+100% {
+left : -300%;
 }
-.footer-links a
-{
-  color:#737373
 }
-.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.site-footer {
+background-color : #26272b;
+padding : 5px 20px;
+font-size : 15px;
+line-height : 3.1em;
+color : #737373;
 }
-.footer-links.inline li
-{
-  display:inline-block
+.site-footer a {
+color : #737373;
 }
-.site-footer .social-icons
-{
-  text-align:right
+.site-footer a:hover {
+color : #3366cc;
+text-decoration : none;
 }
-.site-footer .social-icons a
-{
-  width:50px;
-  height:50px;
-  line-height:65px;
-  margin-left:9px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
+.footer-links {
+padding-left : 0;
+list-style : none;
 }
-.copyright-text
-{
-  margin:0
+.footer-links li {
+display : block;
 }
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30spx
-  }
+.footer-links a {
+color : #737373;
 }
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
-  }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
-  }
+.footer-links a:hover {
+color : #3366cc;
+text-decoration : none;
 }
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
+.footer-links.inline li {
+display : inline-block;
 }
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
+.site-footer .social-icons {
+text-align : right;
 }
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  transition:all .2s linear;
+.site-footer .social-icons a {
+width : 50px;
+height : 50px;
+line-height : 65px;
+margin-left : 9px;
+margin-right : 0;
+border-radius : 100%;
+background-color : #33353d;
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
+.copyright-text {
+margin : 0;
 }
-
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
+@media (max-width: 991px) {
 }
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
+@media (max-width: 767px) {
+.site-footer {
+padding-bottom : 0;
 }
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
+.site-footer .copyright-text, .site-footer .social-icons {
+text-align : center;
 }
-.social-icons a.insta:hover
-{
-  background-color:#ea4c89
 }
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
-  }
+.social-icons {
+padding-left : 0;
+margin-bottom : 0;
+list-style : none;
 }
-.copyright-text{
-  color: aliceblue;
+.social-icons li {
+display : inline-block;
+margin-bottom : 4px;
+}
+.social-icons a {
+background-color : #eceeef;
+color : #818a91;
+font-size : 16px;
+display : inline-block;
+line-height : 44px;
+width : 44px;
+height : 44px;
+text-align : center;
+margin-right : 8px;
+border-radius : 100%;
+transition : all 0.2s linear;
+}
+.social-icons a:active, .social-icons a:focus, .social-icons a:hover {
+color : #fff;
+background-color : #29aafe;
+}
+.social-icons a.facebook:hover {
+background-color : #3b5998;
+}
+.social-icons a.twitter:hover {
+background-color : #00aced;
+}
+.social-icons a.linkedin:hover {
+background-color : #007bb6;
+}
+.social-icons a.insta:hover {
+background-color : #ea4c89;
+}
+@media (max-width: 767px) {
+.social-icons li.title {
+display : block;
+margin-right : 0;
+font-weight : 600;
+}
+}
+.copyright-text {
+color : aliceblue;
 }
 .copyright-text a {
-  color: aliceblue;
-  text-decoration: none;
+color : aliceblue;
+text-decoration : none;
 }
-.copyright-text a:hover{
-  color:#29aafe
+.copyright-text a:hover {
+color : #29aafe;
 }
